--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,63 +1,69 @@
-name: Build and Push to Amazon ECR
+name: CI-CD to ECS
 
 on:
   push:
     branches:
-      - main
-
-permissions:
-  id-token: write
-  contents: read
+      - main   # adjust branch as needed
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout source
-      - name: Checkout source
+      # ----------------------------
+      # Checkout Code
+      # ----------------------------
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Configure AWS credentials (OIDC)
-      - name: Configure AWS Credentials
+      # ----------------------------
+      # Configure AWS Credentials
+      # ----------------------------
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          aws-region: eu-central-1
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1 # change if needed
 
-      # 3. Log in to Amazon ECR
+      # ----------------------------
+      # Login to Amazon ECR
+      # ----------------------------
       - name: Login to Amazon ECR
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # 4. Build and push Docker image
-      - name: Build and Push Docker image
+      # ----------------------------
+      # Build, Tag, and Push Image
+      # ----------------------------
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }} # e.g. myapp-repo
+          IMAGE_TAG: ${{ github.sha }}
         run: |
-          ECR_REPO_URI=${{ secrets.ECR_REPOSITORY_URI }}
-          IMAGE_TAG=${{ github.sha }}
-          
-          # Build and tag image
-          docker build -t $ECR_REPO_URI:$IMAGE_TAG -t $ECR_REPO_URI:latest .
-          
-          # Push both tags
-          docker push $ECR_REPO_URI:$IMAGE_TAG
-          docker push $ECR_REPO_URI:latest
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      # 5. Prepare deployment templates (taskdef.json + appspec.yml)
-      - name: Prepare Deployment Templates
+      # ----------------------------
+      # Render ECS Task Definition
+      # ----------------------------
+      - name: Render task definition
         run: |
-          IMAGE_URI=${{ secrets.ECR_REPOSITORY_URI }}:${{ github.sha }}
-          CONTAINER_NAME=${{ secrets.ECS_CONTAINER_NAME }}
+          sed "s|<IMAGE>|${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}|g" taskdef.json > taskdef-rendered.json
 
-          # Inject image into task definition
-          jq --arg image "$IMAGE_URI" --arg name "$CONTAINER_NAME" \
-            '.containerDefinitions[0].image=$image | .containerDefinitions[0].name=$name' \
-            taskdef.json > taskdef-rendered.json
-
-          # Create zip for pipeline
-          mv taskdef-rendered.json taskdef.json
-          zip deployment-templates.zip taskdef.json appspec.yml
-
-      # 6. Upload templates zip to S3
-      - name: Upload Deployment Templates
+      # ----------------------------
+      # Prepare Deployment Artifacts
+      # ----------------------------
+      - name: Prepare deployment package
         run: |
-          aws s3 cp deployment-templates.zip s3://${{ secrets.ARTIFACT_BUCKET }}/
+          mkdir -p deployment-artifacts
+          cp taskdef-rendered.json appspec.yml deployment-artifacts/
+          cd deployment-artifacts && zip latest.zip taskdef-rendered.json appspec.yml
+
+      # ----------------------------
+      # Upload to S3 (Artifact Bucket)
+      # ----------------------------
+      - name: Upload artifacts to S3
+        run: |
+          aws s3 cp deployment-artifacts/latest.zip s3://${{ secrets.ARTIFACT_BUCKET }}/deployment-artifacts/latest.zip
