--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "<TASK_DEFINITION>"
+        TaskDefinition: "arn:aws:ecs:eu-central-1:004165097941:task-definition/ecs-lab-task:28"
         LoadBalancerInfo:
           ContainerName: "ecs-lab-container"
           ContainerPort: 8080
